# rustjsonnorm

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  bench.py  generate_test_data.py  run_benchmarks.py  test_benchmarks.py
benchmarks/test_data/: arrays_large_1.json  flat_1.json  medium_batch.ndjson  nested_deep_1.json  nested_small_1.json  small_batch.ndjson
src/: core.rs  lib.rs
tests/: README.md  test_correctness.py  test_flatten.py
