[package]
name = "rustjsonnorm"
version = "0.2.5"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "rustjsonnorm"

[dependencies]
pyo3 = { version = "=0.29.0", features = ["extension-module", "abi3-py38"] }
simd-json = "0.13"
indexmap = "2"
rayon = "1.10"
[profile.release]
opt-level = 3
lto = true
