[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rustjsonnorm"
dynamic = ["version"]
description = "Ultra-fast JSON normalization in Rust, exposed as a Python package. Drop-in replacement for pandas.json_normalize — up to 4.3x faster at scale."
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
version = "0.2.4"
